@@ -340,7 +340,7 @@
 # If you wish to control the configuration of each vlan through a seperate
 # script, or wish to rename the vlan interface to something that vconfig
 # cannot then you need to do this.
-#vlan_start_eth0="no
+#vlan_start_eth0="no"
 
 # If you do the above then you may want to depend on eth0 like so
 # depend_vlan1() {
